--- a/.env
+++ b/.env
@@ -2,16 +2,16 @@ APP_NAME=Laravel
 APP_ENV=local
 APP_KEY=base64:20O5yLMD9OCnEuAr9KDvPhaHOVrT4zJhCZ8W0cHEDP4=
 APP_DEBUG=true
-APP_URL=https://gis.arvitaagusk.com/
+APP_URL=http://localhost
 
 LOG_CHANNEL=stack
 
 DB_CONNECTION=mysql
 DB_HOST=localhost
 DB_PORT=3306
-DB_DATABASE=arvm5443_gis
-DB_USERNAME=arvm5443
-DB_PASSWORD=mSuEkFkHT7sw64
+DB_DATABASE=web_gis
+DB_USERNAME=root
+DB_PASSWORD=
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
