--- a/.env
+++ b/.env
@@ -9,9 +9,9 @@ LOG_CHANNEL=stack
 DB_CONNECTION=mysql
 DB_HOST=localhost
 DB_PORT=3306
-DB_DATABASE=web_gis
-DB_USERNAME=root
-DB_PASSWORD=
+DB_DATABASE=arvm5443_gis
+DB_USERNAME=arvm5443
+DB_PASSWORD=mSuEkFkHT7sw64
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
